Fix z-index of phone

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -46,7 +46,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 0.3s ease-out
+    transition: all 0.3s ease-out;
+    z-index: 20;
 }
 
 .f-phone_circle:hover {
